test/algeff/wrong/eff-rec1.kk.out
test/algeff/wrong/eff-rec1.kk(1, 1): error: Type .ops-cow is declared as being (co)inductive but it occurs
 recursively in a negative position.
 hint: declare it as a 'type rec' (or 'effect rec)' to allow negative occurrences