test/algeff/wrong/eff-rec1.kk
effect cow {
  fun moo() : (() -> cow ())
}

val cow = handler {
    moo() -> {
        println("moo")
        resume( {moo()() } )
    }
}

fun main() {
    cow {
        moo()()
    }
}
